trunk/Archive2/3a/68767675822d58/output
main.cpp:58:4: warning: ISO C++ prohibits anonymous structs [-Wpedantic]
    };
    ^
main.cpp: In function 'int main()':
main.cpp:68:9: error: 'struct Furrovine::RVector<float, 3ul>' has no member named 'x'
     arf.x = 1.0f;
         ^
main.cpp:69:9: error: 'struct Furrovine::RVector<float, 3ul>' has no member named 'y'
     arf.y = 2.0f;
         ^
main.cpp:70:6: error: 'struct Furrovine::RVector<float, 3ul>' has no member named 'z'
  arf.z = 3.0f;
      ^
